--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -9,6 +9,9 @@ security:
             entity:
                 class: App\Entity\User
                 property: username
+    role_hierarchy:
+        ROLE_ADMIN:       ROLE_USER
+        ROLE_SUPER_ADMIN: [ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
@@ -36,6 +39,11 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
+        - { path: ^/tableauDeBord, roles: ROLE_ADMIN }
+        - { path: ^/figurineAjout, roles: ROLE_ADMIN }
+        - { path: ^/figurineSupression, roles: ROLE_ADMIN }
+        - { path: ^/figurineModification, roles: ROLE_ADMIN }
+        - { path: ^/armeeAjout, roles: ROLE_USER }
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
 
